src/styles/PostsSlug.module.css
.wrap {
    margin-top: 100px;
    width: 902px;
    margin-left: auto;
    margin-right: auto;
}

.tag_wrap {
    width: auto;
    height: 25px;
}

.tag {
    background-color: #FBF198;
    color: black;
    width: auto;
    height: 25px;
    display: flex;
    border-radius: 10px;
    font-size: 1rem;
    font-family: 'Pretendard';
    font-weight: 500;
    align-items: center;
    justify-content: center;
    clear: both;
    float: left;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 15px;
    padding-right: 15px;
    margin-bottom: 10px;
}

.date {
    clear: both;
    font-size: 20px;
    font-family: 'Pretendard';
    font-weight: 500;
}

.title {
    font-size: 40px;
    font-family: 'Pretendard';
    font-weight: 600;
    margin-top: 5px;
    margin-bottom: 10px;
}

.description {
    font-size: 20px;
    font-family: 'Pretendard';
    font-weight: 500;
    margin-bottom: 63px;
}

.img_wrap {
    display: flex;
    justify-content: center;
    margin-bottom: 68px;
}

.image {
    width: 100%;
    height: auto;
    object-fit: cover;
}

.content {
    font-family: 'Pretendard';
    font-weight: 400;
    margin-bottom: 10px;
}

.content blockquote {
    margin: 1.5rem 0px;
    padding: 0.5rem 2rem;
    border-left: 5px solid #faed74;
    border-radius: 5px;
    background-color: rgb(244, 244, 244);
}

.content blockquote p {
    font-size: 1.1rem;
    margin-top: 10px;
    margin-bottom: 10px;
    line-height: 30px;
    font-family: 'Pretendard';
    color: black;
}

.content figcaption {
    color: grey;
    text-align: center;
    margin-top: -20px;
    margin-bottom: 60px;
}

.content li {
    font-family: 'Pretendard';
    font-weight: 600;
    font-size: 20px;
    margin-top: 10px;
    margin-bottom: 10px;
    line-height: 35px;
}

.content pre {
    padding: 20px;
    border-radius: 10px;
    font-size: 15px;
    line-height: 25px;
    overflow: scroll;
    -ms-overflow-style: none; /* 인터넷 익스플로러 */
    scrollbar-width: none; /* 파이어폭스 */
    margin-top: 30px;
    margin-bottom: 30px;
    border: 1px white solid;
}

.content pre::-webkit-scrollbar {
    display: none; /* 크롬, 사파리, 오페라, 엣지 */
}

.content code {
    font-family: 'Menlo'
}

.content p {
    width: 100%;
    font-size: 1rem;
    margin-top: 20px;
    margin-bottom: 20px;
    line-height: 30px;
    white-space: normal;
}

.content li {
    font-size: 1rem;
    font-family: 'Pretendard';
    font-weight: 500;
    text-decoration: none;
    white-space: normal;
    word-wrap: break-word; 
    line-height: 20px;
}

.content a {
    font-size: 1rem;
    font-family: 'Pretendard';
    color: inherit;
    text-decoration: none;
    white-space: normal;
    word-wrap: break-word; 
}

.content a:hover {
    text-decoration: underline;
}

.content h1 {
    margin-top: 50px;
    margin-bottom: 10px;
    font-size: 2.3rem;
}

.content h2 {
    margin-top: 50px;
    margin-bottom: 20px;
    font-size: 2rem;
}

.content h3 {
    margin-top: 50px;
    margin-bottom: 20px;
    font-size: 1.7rem;
}

.content h4 {
    margin-top: 50px;
    margin-bottom: 20px;
    font-size: 1.5rem;
}

.content h5 {
    margin-top: 50px;
    margin-bottom: 20px;
    font-size: 1.3rem;
}

.content h6 {
    margin-top: 50px;
    margin-bottom: 20px;
    font-size: 1rem;
}

.content img {
    width: 100%;
    height: auto;
    object-fit: cover;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border: 1px white solid;
}



@media (max-width:1023px) {
    .wrap {
        width: 90%;
    }

    
}

